Bug 235836 - Filter button in schedules view does not have a function
Summary: Filter button in schedules view does not have a function
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-30 19:52 UTC by Thomas Baumgart
Modified: 2010-05-27 16:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2010-04-30 19:52:26 UTC
Version:           SVN HEAD (using KDE 4.3.5)
OS:                Linux
Installed from:    openSUSE RPMs

The filter button on the right above the list of schedules lost it's functionality during the port to KDE4.
Comment 1 Cristian Oneț 2010-04-30 22:57:01 UTC
I don't quite get what you are trying to say. Is the filter's functionality broken over there? It works just fine here.
Comment 2 Thomas Baumgart 2010-05-01 08:03:28 UTC
Yes, but it also does not work in 1.0.4.   Looks like it might be related to my data.  I'll try to find some time to fix it.
Comment 3 Alvaro Soliverez 2010-05-03 01:25:36 UTC
It works fine here too.
Comment 4 Thomas Baumgart 2010-05-27 16:58:51 UTC
SVN commit 1131177 by tbaumgart:

Support account hierarchy for the schedule filter

BUG: 235836

 M  +31 -14    kscheduledview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1131177