Support account hierarchy for the schedule filter

BUG: 235836

svn path=/trunk/kdereview/kmymoney/; revision=1131177